--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -25,8 +25,8 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{form1}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
-                <i class="add to calendar icon"></i>
-              </button>
+                                <i class="add to calendar icon"></i>
+                            </button>
                         </div>
                         <div class="field">
                             <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
@@ -34,109 +34,130 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{form2}}" class="custom-readonly" [readonly]="true">
                             <button class="ui icon button">
-                <i class="add to calendar icon"></i>
-              </button>
+                                <i class="add to calendar icon"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <label class="custom-label-w-25">คำค้นหา </label>
+                        <div class="four ui action input">
+                            <input value="591113-01-00001"  class="custom-label-w-25" />
+
+                        </div>
+                        <div class="field">
+                            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                        <div class="four ui action input">
+                            <button class="ui mini primary button" routerLink="/#/add-data?id=${data}">
+                                <i class="add icon"></i>
+                                ค้าหา
+                            </button>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <button class="ui mini primary button" routerLink="/#/add-data?id=${data}">
+                                <i class="add icon"></i>
+                                เพิ่มข้อมูล
+                            </button>
                         </div>
                     </div>
                 </div>
 
             </div>
+            <div class="ui attached segment">
 
-        </div>
-        <div class="ui attached segment">
-
-            <div class="ui grid">
-                <div class="three wide column">
-                    <div class="ui vertical menu">
-                        <div class="item">
-                            <div class="header">พิกัดสินค้า</div>
-                            <div class="menu">
-                                <a class="item" *ngFor="let item of listMenu">-{{item}}</a>
+                <div class="ui grid">
+                    <div class="three wide column">
+                        <div class="ui vertical menu">
+                            <div class="item">
+                                <div class="header">พิกัดสินค้า</div>
+                                <div class="menu">
+                                    <a class="item" *ngFor="let item of listMenu">-{{item}}</a>
+                                </div>
                             </div>
                         </div>
+
                     </div>
+                    <div class="thirteen wide column">
+                        <div style="overflow-x: scroll;">
+                            <table id="userManagementDt" class="ui small celled table  aligned" style="width: 5000px;">
+                                <thead id="trDrinamic">
+                                    <tr>
+                                        <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                                        <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
+                                        <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
+                                        <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
+                                        <th rowspan="2" style="text-align: center !important">พื้นที่</th>
+                                        <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
+                                        <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
+                                        <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
+                                        <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
+                                        <th rowspan="2" style="text-align: center !important">ภาค</th>
+                                        <th rowspan="2" style="text-align: center !important">พิกัด</th>
+                                        <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
+                                        <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
+                                        <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
+                                        <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
+                                        <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
+                                        <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
+                                    </tr>
+                                    <tr>
+                                        <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
+                                        <th style="text-align: center !important">{{ month/2 }} เดือนหลัง </th>
+                                        <th style="text-align: center !important">2558</th>
+                                        <th style="text-align: center !important">2559</th>
+                                        <th style="text-align: center !important">2560</th>
+                                        <th style="text-align: center !important">พ.ค. 58</th>
+                                        <th style="text-align: center !important">มิ.ย. 58</th>
+                                        <th style="text-align: center !important">ก.ค. 58</th>
+                                        <th style="text-align: center !important">ส.ค. 58</th>
+                                        <th style="text-align: center !important">ก.ย. 58</th>
+                                        <th style="text-align: center !important">ต.ค. 58</th>
+                                        <th style="text-align: center !important">พ.ย. 58</th>
+                                        <th style="text-align: center !important">ธ.ค. 58</th>
+                                        <th style="text-align: center !important">ม.ค. 59</th>
+                                        <th style="text-align: center !important">ก.พ. 59</th>
+                                        <th style="text-align: center !important">มี.ค. 59</th>
+                                        <th style="text-align: center !important">เม.ย. 59 </th>
+                                        <th style="text-align: center !important">พ.ค. 58</th>
+                                        <th style="text-align: center !important">มิ.ย. 58</th>
+                                        <th style="text-align: center !important">ก.ค. 58</th>
+                                        <th style="text-align: center !important">ส.ค. 58</th>
+                                        <th style="text-align: center !important">ก.ย. 58</th>
+                                        <th style="text-align: center !important">ต.ค. 58</th>
+                                        <th style="text-align: center !important">พ.ย. 58</th>
+                                        <th style="text-align: center !important">ธ.ค. 58</th>
+                                        <th style="text-align: center !important">ม.ค. 59</th>
+                                        <th style="text-align: center !important">ก.พ. 59</th>
+                                        <th style="text-align: center !important">มี.ค. 59</th>
+                                        <th style="text-align: center !important">เม.ย. 59 </th>
 
-                </div>
-                <div class="thirteen wide column">
-                    <div style="overflow-x: scroll;">
-                        <table id="userManagementDt" class="ui small celled table  aligned" style="width: 5000px;">
-                            <thead>
-                                <tr>
-                                    <th rowspan="2" style="text-align: center !important">ลำดับ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">พื้นที่</th>
-                                    <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
-                                    <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
-                                    <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
-                                    <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
-                                    <th rowspan="2" style="text-align: center !important">ภาค</th>
-                                    <th rowspan="2" style="text-align: center !important">พิกัด</th>
-                                    <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
-                                    <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
-                                    <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
-                                </tr>
-                                <tr>
-                                    <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
-                                    <th style="text-align: center !important">{{ month/2 }} เดือนหลัง </th>
-                                    <th style="text-align: center !important">2558</th>
-                                    <th style="text-align: center !important">2559</th>
-                                    <th style="text-align: center !important">2560</th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
 
-                                </tr>
-                            </thead>
-                            <tbody>
+                                </tbody>
 
-                            </tbody>
+                            </table>
+                        </div>
 
-                        </table>
                     </div>
-
                 </div>
-            </div>
 
 
-            <div class="ui center aligned grid">
-                <div class="sixteen wide column">
-                    <button class="ui mini primary button" routerLink="/create-working-paper-trader">
-            <i class="add icon"></i>
-            สร้างกระดาษทำการคัดเลือกราย
-          </button>
-                    <button class="ui mini button">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
+                <div class="ui center aligned grid">
+                    <div class="sixteen wide column">
+                        <button class="ui mini primary button" routerLink="/create-working-paper-trader">
+                            <i class="add icon"></i>
+                            สร้างกระดาษทำการคัดเลือกราย
+                        </button>
+                        <button class="ui mini button">
+                            <i class="refresh icon"></i>
+                            ล้างข้อมูล
+                        </button>
+                    </div>
                 </div>
+
             </div>
 
         </div>
-
-    </div>
