--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -15,8 +15,8 @@
                 <div class="menu" style="margin:20px;">
                     <a class="item" [routerLink]="['/int02/1']" routerLinkActive="active">สร้างแบบสอบทานระบบการควบคุมภายใน</a>
                     <a class="item" [routerLink]="['/int02/m2']" routerLinkActive="active">สร้างแบแบบสอบทานระบบการควบคุมภายใน (หน่วยงาน)บสอบทานระบบการควบคุมภายใน</a>
-                    <a class="item" routerLinkActive="active">สรุปผลแบบสอบทานระบบการควบคุมภายใน</a>
-                    <a class="item" routerLinkActive="active">จัดการข้อมูลแบบสอบทานระบบการควบคุมภายใน</a>
+                    <a class="item" [routerLink]="['/int02/m3']" routerLinkActive="active">สรุปผลแบบสอบทานระบบการควบคุมภายใน</a>
+                    <a class="item" [routerLink]="['/int02/m4']" routerLinkActive="active">จัดการข้อมูลแบบสอบทานระบบการควบคุมภายใน</a>
                 </div>
             </div>
             <div class="ui simple dropdown item">
