--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-04/ts01-04.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-04/ts01-04.component.html
@@ -1,5 +1,5 @@
-<div
-    class="ui top centered attached header segment"
+<form (submit)="onSubmit($event)" ngNativeValidate>
+<div class="ui top centered attached header segment"
     style="background: #1e83db;color: white">
     <span>จัดทำบันทึกข้อความ หนังสือราชการ และแบบ ตส.</span>
 </div>
@@ -13,36 +13,30 @@
                     <div class="one wide field">
                         <p>ที่ : </p>
                     </div>
-
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text"  name="onNumber"  [(ngModel)]="obj.onNumber" >
                     </div>
-
                     <div class="one wide field" style="padding-left: 14px;">
                         <p>/</p>
                     </div>
-
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text" name="onNumber1"   [(ngModel)]="obj.onNumber1">
                     </div>
-
                     <div class="one wide field">
                     </div>
-
                     <div class="one wide field">
                         <p>วันที่ : </p>
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text" name="date1"  [(ngModel)]="obj.date1" >
                     </div>
-
                     <div class="one wide field" style="padding-right: 0px;">
                         <p>เดือน : </p>
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text" name="month1"  [(ngModel)]="obj.month1">
                     </div>
 
                     <div class="one wide field">
@@ -50,7 +44,7 @@
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text" name="buddhist1"   [(ngModel)]="obj.buddhist1">
                     </div>
                 </div>
 
@@ -60,7 +54,7 @@
                     </div>
 
                     <div class="five wide field">
-                        <input type="text">
+                        <input type="text" name="subject" [(ngModel)]="obj.subject">
                     </div>
 
                     <div class="two wide field">
@@ -71,7 +65,7 @@
                     </div>
 
                     <div class="five wide field">
-                        <input type="text">
+                        <input type="text" name="study" [(ngModel)]="obj.study">
                     </div>
                 </div>
 
@@ -81,7 +75,7 @@
                     </div>
 
                     <div class="five wide field">
-                        <input type="text">
+                        <input type="text"  name="referto"   [(ngModel)]="obj.referto">
                     </div>
 
                     <div class="two wide field">
@@ -97,7 +91,7 @@
                     </div>
 
                     <div class="fourteen wide field">
-                        <textarea name="" id="" cols="30" rows="4" style="resize: none;"></textarea>
+                        <textarea name="want" id="" cols="30" rows="4" style="resize: none;" [(ngModel)]="obj.want"></textarea>
                     </div>
                 </div>
 
@@ -107,7 +101,7 @@
                     </div>
 
                     <div class="five wide field">
-                        <input type="text">
+                        <input type="text"  name="appointment"  [(ngModel)]="obj.appointment">
                     </div>
 
                     <div class="one wide field">
@@ -115,7 +109,7 @@
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text" name="date2"  [(ngModel)]="obj.date2">
                     </div>
 
                     <div class="one wide field" style="padding-right: 0px;">
@@ -123,7 +117,7 @@
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text" name="month2"  [(ngModel)]="obj.month2">
                     </div>
 
                     <div class="one wide field">
@@ -131,7 +125,7 @@
                     </div>
 
                     <div class="two wide field">
-                        <input type="text">
+                        <input type="text" name="buddhist2"  [(ngModel)]="obj.buddhist2">
                     </div>
                 </div>
 
@@ -141,7 +135,7 @@
                     </div>
 
                     <div class="fourteen wide field">
-                        <textarea name="" id="" cols="30" rows="4" style="resize: none;"></textarea>
+                        <textarea name="pleasebring" id="" cols="30" rows="4" style="resize: none;"  [(ngModel)]="obj.pleasebring"></textarea>
                     </div>
                 </div>
 
@@ -163,7 +157,7 @@
                     </div>
 
                     <div class="five wide field">
-                        <input type="text">
+                        <input type="text"   name="intpector" [(ngModel)]="obj.intpector">
                     </div>
 
                     <div class="two wide field">
@@ -179,7 +173,7 @@
                     </div>
 
                     <div class="five wide field">
-                        <input type="text">
+                        <input type="text"  name="poslion"  [(ngModel)]="obj.poslion">
                     </div>
 
                     <div class="two wide field">
@@ -199,7 +193,7 @@
 <div class="ui bottom centered attached segment">
     <div class="ui center aligned grid">
         <div class="eight wide column">
-            <button class="ui mini green button" type="button">
+            <button class="ui mini green button"type="submit">
               <i class="save icon"></i>
               พิมพ์เอกสาร
             </button>
@@ -210,3 +204,4 @@
         </div>
     </div>
 </div>
+</form>
