--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/mis_t_s_01_04.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/mis_t_s_01_04.jrxml
@@ -19,6 +19,22 @@
 			<bottomPen lineWidth="3.0" lineStyle="Dotted"/>
 		</box>
 	</style>
+	<parameter name="onNumber" class="java.lang.String"/>
+	<parameter name="date1" class="java.lang.String"/>
+	<parameter name="month1" class="java.lang.String"/>
+	<parameter name="buddhist1" class="java.lang.String"/>
+	<parameter name="subject" class="java.lang.String"/>
+	<parameter name="study" class="java.lang.String"/>
+	<parameter name="referto" class="java.lang.String"/>
+	<parameter name="appointment" class="java.lang.String"/>
+	<parameter name="want" class="java.lang.String"/>
+	<parameter name="pleasebring" class="java.lang.String"/>
+	<parameter name="intpector" class="java.lang.String"/>
+	<parameter name="poslion" class="java.lang.String"/>
+	<parameter name="date2" class="java.lang.String"/>
+	<parameter name="month2" class="java.lang.String"/>
+	<parameter name="buddhist2" class="java.lang.String"/>
+	<parameter name="onNumber1" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -26,7 +42,7 @@
 		<band height="727" splitType="Stretch">
 			<image>
 				<reportElement x="195" y="0" width="62" height="70" uuid="90ca04f2-82d8-4e03-92ba-af7e35dc179c"/>
-				<imageExpression><![CDATA["C:/Users/toffee/Desktop/img/logo1.jpg"]]></imageExpression>
+				<imageExpression><![CDATA["target/classes/reports/images/logo1.jpg"]]></imageExpression>
 			</image>
 			<textField>
 				<reportElement style="Topic" x="377" y="44" width="76" height="26" uuid="6d1514d6-b255-44a7-b908-8165137638d3"/>
@@ -53,6 +69,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{onNumber}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="50" y="109" width="3" height="18" uuid="febaaa54-9584-4056-9473-219f02448e88"/>
@@ -69,8 +86,9 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{onNumber1}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="239" y="127" width="214" height="18" uuid="a5a2d695-1a9c-4147-a69d-fb650a1c2b2f"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -96,6 +114,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{date1}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="0" y="163" width="22" height="18" uuid="17b21979-121c-4d0d-a216-bc079f6837b2"/>
@@ -112,6 +131,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{subject}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement style="data" x="276" y="469" width="117" height="18" uuid="670e0dd6-c1dc-4bb8-8b46-0054525c519b"/>
@@ -123,6 +143,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{intpector}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="249" y="488" width="33" height="18" uuid="d190f454-6830-4fdb-bc4f-469b95f9a0ad"/>
@@ -181,6 +202,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{month1}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="368" y="145" width="18" height="18" uuid="7116c8cd-e2e0-4ad9-a058-b053251b6b7b"/>
@@ -197,6 +219,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{buddhist1}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="103" y="309" width="32" height="18" uuid="7c4f9317-d5b5-464a-a8c6-1b7a3de5b369"/>
@@ -213,6 +236,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{date2}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="165" y="309" width="25" height="18" uuid="a69ade16-8b19-4569-b094-3ef380185028"/>
@@ -229,6 +253,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{month2}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="282" y="309" width="18" height="18" uuid="7ed9578d-8968-4d61-90f0-36b2420d279a"/>
@@ -245,13 +270,14 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{buddhist2}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="354" y="309" width="23" height="18" uuid="abef76cc-6caa-4b87-b65c-3360314f74f3"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["เวลา"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="377" y="309" width="63" height="18" uuid="e576626f-7b89-446b-bae2-fdc7311fe628"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -277,7 +303,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["ขอแสดงความนับถือ"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="239" y="109" width="214" height="18" uuid="a6a80494-a580-47c2-a2a7-42061fa53a04"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -298,6 +324,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{study}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="0" y="181" width="22" height="18" uuid="ef3cf906-565d-49b4-a655-e9629fc2d376"/>
@@ -319,13 +346,14 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{referto}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="72" y="218" width="382" height="18" uuid="daa1167d-f119-48ff-8227-70a9f0b8a7f2"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["ด้วยทางราชการมีความประสงค์จะทราบข้อเท็จจริงหรือข้อความบางอย่างอันเกี่ยวกับสรรพสามิต "]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="1" y="236" width="453" height="18" uuid="e412a526-2d06-45a8-a45b-4ee0d0c330b1"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -336,7 +364,7 @@
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="1" y="254" width="453" height="18" uuid="19281988-21e1-4ca2-be62-118416354feb"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -347,7 +375,7 @@
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="1" y="273" width="453" height="18" uuid="e8fddb7d-b658-45ba-8c0c-fb75e7e48204"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -373,13 +401,14 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{appointment}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="440" y="309" width="14" height="18" uuid="10d68e82-cb37-498f-81fd-c8be2e53d962"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["น."]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="-1" y="309" width="104" height="18" uuid="8d356c33-1dcd-44e3-b946-34cdabcfdd40"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -400,8 +429,9 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{pleasebring}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="1" y="345" width="453" height="18" uuid="d2f74399-cc5e-471f-a3fb-5c6ab6a325fb"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -412,7 +442,7 @@
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="0" y="364" width="454" height="18" uuid="9e271379-c03e-4061-b3c2-c15c02a8924e"/>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
@@ -433,6 +463,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[$P{poslion}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
