--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
@@ -106,7 +106,7 @@
                     <div class="sixteen wide column">
                         <button type="submit" class="ui mini primary button">
                             <i class="save icon"></i>
-                            สร้างกระดาษทำการคัดเลือกราย
+                            ส่งข้อมูลให้ส่วนกลาง
                         </button>
                         <button type="button" class="ui mini button" routerLink="/add-external-data">
                             <i class="refresh icon"></i>
